tests/machine/x/cpp/group_by_left_join.cpp
// Generated by Mochi compiler v0.10.28 on 2025-07-18T07:01:43Z
#include <any>
#include <iostream>
#include <string>
#include <vector>

inline bool __any_eq(const std::any &a, const std::any &b) {
  if (a.type() != b.type())
    return false;
  if (a.type() == typeid(int))
    return std::any_cast<int>(a) == std::any_cast<int>(b);
  if (a.type() == typeid(double))
    return std::any_cast<double>(a) == std::any_cast<double>(b);
  if (a.type() == typeid(bool))
    return std::any_cast<bool>(a) == std::any_cast<bool>(b);
  if (a.type() == typeid(std::string))
    return std::any_cast<std::string>(a) == std::any_cast<std::string>(b);
  return false;
}
inline void __print_any(const std::any &a) {
  if (a.type() == typeid(int))
    std::cout << std::any_cast<int>(a);
  else if (a.type() == typeid(double))
    std::cout << std::any_cast<double>(a);
  else if (a.type() == typeid(bool))
    std::cout << (std::any_cast<bool>(a) ? "true" : "false");
  else if (a.type() == typeid(std::string))
    std::cout << std::any_cast<std::string>(a);
}

struct Customer {
  int id;
  std::string name;
};
struct Order {
  int id;
  int customerId;
};
struct Stat {
  Customer c;
  Order o;
};
struct __struct4 {
  std::any key;
  std::vector<Stat> items;
};
struct __struct5 {
  std::any name;
  int count;
};
int main() {
  std::vector<Customer> customers = {Customer{1, std::string("Alice")},
                                     Customer{2, std::string("Bob")},
                                     Customer{3, std::string("Charlie")}};
  std::vector<Order> orders = {Order{100, 1}, Order{101, 1}, Order{102, 2}};
  std::vector<Stat> stats = ([&]() {
    std::vector<__struct4> __groups;
    for (auto c : customers) {
      {
        bool __matched0 = false;
        for (auto o : orders) {
          if (!((o.customerId == c.id)))
            continue;
          __matched0 = true;
          auto __key = c.name;
          bool __found = false;
          for (auto &__g : __groups) {
            if (__any_eq(__g.key, __key)) {
              __g.items.push_back(Stat{c, o});
              __found = true;
              break;
            }
          }
          if (!__found) {
            __groups.push_back(__struct4{__key, std::vector<Stat>{Stat{c, o}}});
          }
        }
        if (!__matched0) {
          auto o = std::decay_t<decltype(*(orders).begin())>{};
          auto __key = c.name;
          bool __found = false;
          for (auto &__g : __groups) {
            if (__any_eq(__g.key, __key)) {
              __g.items.push_back(Stat{c, o});
              __found = true;
              break;
            }
          }
          if (!__found) {
            __groups.push_back(__struct4{__key, std::vector<Stat>{Stat{c, o}}});
          }
        }
      }
    }
    std::vector<__struct5> __items;
    for (auto &g : __groups) {
      __items.push_back(__struct5{g.key, ((int)([&]() {
                                            std::vector<Stat> __items;
                                            for (auto r : g.items) {
                                              if (!((r.o != Order{})))
                                                continue;
                                              __items.push_back(r);
                                            }
                                            return __items;
                                          })()
                                              .size())});
    }
    return __items;
  })();
  std::cout << std::string("--- Group Left Join ---") << std::endl;
  for (auto s : stats) {
    {
      std::cout << s.name;
      std::cout << ' ';
      std::cout << std::string("orders:");
      std::cout << ' ';
      std::cout << s.count;
      std::cout << std::endl;
    }
  }
  return 0;
}
